attempt to fix faux bold on iOS

--- a/docs/markdown.css
+++ b/docs/markdown.css
@@ -69,6 +69,7 @@ body h4,
 body h5,
 body h6 {
   font-family: recursive-sans-casual-bold;
+  font-style: normal;
   margin-top: 20px;
   margin-bottom: 5px;
   line-height: 1.25;
